apps/60-services/vaultwarden/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
          env: null
        - name: DOMAIN
          value: https://vaultwarden.truxonline.com
