apps/60-services/vaultwarden/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  labels:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/icon: vaultwarden.png
    gethomepage.dev/group: Services
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: vaultwarden.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
  tls:
    - hosts:
        - vaultwarden.truxonline.com
      secretName: vaultwarden-tls
